Previous_commit.txt.old
bin/.gitkeep
bin/helloWorld-1.0-SNAPSHOT.jar
changes.txt.old
target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
target/rough/asdf
target/surefire-reports/TEST-com.companyname.bank.AppTest.xml
target/surefire-reports/com.companyname.bank.AppTest.txt