@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://maven.apache.org/surefire/maven-surefire-plugin/xsd/surefire-test-report.xsd" name="com.companyname.bank.AppTest" time="0.036" tests="1" errors="0" skipped="0" failures="0">
+<testsuite xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://maven.apache.org/surefire/maven-surefire-plugin/xsd/surefire-test-report.xsd" name="com.companyname.bank.AppTest" time="0.037" tests="1" errors="0" skipped="0" failures="0">
   <properties>
     <property name="gopherProxySet" value="false"/>
     <property name="awt.toolkit" value="sun.lwawt.macosx.LWCToolkit"/>
@@ -17,7 +17,7 @@
     <property name="sun.java.launcher" value="SUN_STANDARD"/>
     <property name="user.country" value="IN"/>
     <property name="sun.boot.library.path" value="/Library/Java/JavaVirtualMachines/jdk-9.0.1.jdk/Contents/Home/lib"/>
-    <property name="sun.java.command" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire/surefirebooter5715207379025117067.jar /Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire 2018-10-25T22-16-15_756-jvmRun1 surefire11938431192805738837tmp surefire_04204447212807247522tmp"/>
+    <property name="sun.java.command" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire/surefirebooter15995183008179292424.jar /Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire 2018-10-25T22-22-08_973-jvmRun1 surefire8515285829035178422tmp surefire_0465054636745016823tmp"/>
     <property name="jdk.debug" value="release"/>
     <property name="surefire.test.class.path" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/test-classes:/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/classes:/Users/ashishsrivastava/.m2/repository/junit/junit/4.11/junit-4.11.jar:/Users/ashishsrivastava/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar:"/>
     <property name="sun.cpu.endian" value="little"/>
@@ -32,7 +32,7 @@
     <property name="java.vm.specification.vendor" value="Oracle Corporation"/>
     <property name="java.specification.name" value="Java Platform API Specification"/>
     <property name="java.awt.graphicsenv" value="sun.awt.CGraphicsEnvironment"/>
-    <property name="surefire.real.class.path" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire/surefirebooter5715207379025117067.jar"/>
+    <property name="surefire.real.class.path" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire/surefirebooter15995183008179292424.jar"/>
     <property name="sun.management.compiler" value="HotSpot 64-Bit Tiered Compilers"/>
     <property name="java.runtime.version" value="9.0.1+11"/>
     <property name="user.name" value="ashish.srivastava"/>
